# url-shortener

./: README.md  pyproject.toml
src/: .env .template  asgi.py  settings.py  urls.py  wsgi.py
src/url_shortener/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
src/url_shortener/migrations/: 0001_initial.py  0002_rename_shorturlmodel_shorturl.py
src/url_shortener/tests/: factories.py  test_e2e.py  test_utils.py  test_views.py
